# dovecot-notmuch

src/plugins/fts-notmuch/: Makefile.am  fts-backend-notmuch.c  fts-notmuch-plugin.c  fts-notmuch-plugin.h
